Fixed subnavbar styling and realigned the hero banner

--- a/student-store-ui/src/components/App/App.css
+++ b/student-store-ui/src/components/App/App.css
@@ -5,7 +5,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: row;
-  background-color: #E3E3E3;
+  background-color: #f1f1f1;
 }
 .app main {
   width: 100%;
