--- a/student-store-ui/src/components/Hero/Hero.css
+++ b/student-store-ui/src/components/Hero/Hero.css
@@ -1,28 +1,24 @@
 .hero{
     width: 100%;
     max-width: 100vw;
-    height: 350px;
+    padding-left: 40px;
 }
 
 .hero .content{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    background-color: #00c385;
-    height: 350px;
+    background-color: rgb(202, 160, 221);
     justify-content: space-between;
     color: white;
-    
 }
 
 .hero  .content .intro{
-    display: flex;
     flex-direction: column;
     height: 350px;
     justify-content: center;
     padding: 0 40px;
-    flex: 1;
-    
+    padding-top: 30px;
+    padding-left: 50px;
 }
 
 .hero .content .intro h1{
@@ -30,6 +26,7 @@
     font-weight: 700;
     margin: 0 auto;
     padding: 0;
+    
 }
 
 .hero .content .intro p{
@@ -46,7 +43,7 @@
     
 }
 .hero .content .media .hero-img{
-    width: 150px;
-    height: 150px;
+    width: 120px;
+    height: 100px;
     margin: 0 150px 0 50px;
 }
