--- a/student-store-ui/src/components/Home/Home.css
+++ b/student-store-ui/src/components/Home/Home.css
@@ -1,10 +1,11 @@
 .home {
-  width: 100%;
+  width: 95%;
   max-width: 100vw;
   height: 100%;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  padding-left: 20px;
 }
 
 
