--- a/student-store-ui/src/components/Sidebar/Sidebar.css
+++ b/student-store-ui/src/components/Sidebar/Sidebar.css
@@ -6,4 +6,5 @@
     width: 60px;
     overflow-y: scroll;
     position: fixed;
+    padding-bottom: 2rem;
 }
